--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,11 @@
 asgiref==3.3.1
+beautifulsoup4==4.9.3
 Django==3.1.7
+django-livereload-server==0.3.2
 Pillow==8.1.2
 pytz==2021.1
 simplejson==3.17.2
+six==1.15.0
+soupsieve==2.2.1
 sqlparse==0.4.1
+tornado==6.1
