--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ beautifulsoup4==4.9.3
 Django==3.1.7
 django-livereload-server==0.3.2
 Pillow==8.1.2
+python-decouple==3.4
 pytz==2021.1
 simplejson==3.17.2
 six==1.15.0
