--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,9 @@ asgiref==3.3.1
 beautifulsoup4==4.9.3
 Django==3.1.7
 django-livereload-server==0.3.2
+gunicorn==20.1.0
 Pillow==8.1.2
+psycopg2-binary==2.8.6
 python-decouple==3.4
 pytz==2021.1
 simplejson==3.17.2
