--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
 asgiref==3.3.1
 beautifulsoup4==4.9.3
+cssutils==2.2.0
 Django==3.1.7
+django-inlinecss==0.3.0
 django-livereload-server==0.3.2
+future==0.18.2
 gunicorn==20.1.0
 Pillow==8.1.2
 psycopg2-binary==2.8.6
+pynliner==0.8.0
 python-decouple==3.4
 pytz==2021.1
 simplejson==3.17.2
