--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,17 @@
+aioredis==1.3.1
 asgiref==3.3.1
+async-timeout==3.0.1
+attrs==21.2.0
+autobahn==21.3.1
+Automat==20.2.0
 beautifulsoup4==4.9.3
+cffi==1.14.5
+channels==3.0.3
+channels-redis==3.2.0
+constantly==15.1.0
+cryptography==3.4.7
 cssutils==2.2.0
+daphne==3.0.2
 Django==3.1.7
 django-inlinecss==0.3.0
 django-livereload-server==0.3.2
@@ -8,13 +19,26 @@ django-naomi==0.8
 djangorestframework==3.12.4
 future==0.18.2
 gunicorn==20.1.0
+hiredis==2.0.0
+hyperlink==21.0.0
+idna==3.1
+incremental==21.3.0
+msgpack==1.0.2
 Pillow==8.1.2
 psycopg2-binary==2.8.6
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
+pycparser==2.20
 pynliner==0.8.0
+pyOpenSSL==20.0.1
 python-decouple==3.4
 pytz==2021.1
+service-identity==21.1.0
 simplejson==3.17.2
 six==1.15.0
 soupsieve==2.2.1
 sqlparse==0.4.1
 tornado==6.1
+Twisted==21.2.0
+txaio==21.2.1
+zope.interface==5.4.0
