--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 aioredis==1.3.1
+arabic-reshaper==2.1.3
 asgiref==3.3.1
 async-timeout==3.0.1
 attrs==21.2.0
@@ -19,6 +20,7 @@ djangorestframework==3.12.4
 future==0.18.2
 gunicorn==20.1.0
 hiredis==2.0.0
+html5lib==1.1
 hyperlink==21.0.0
 idna==3.1
 incremental==21.3.0
@@ -30,8 +32,11 @@ pyasn1-modules==0.2.8
 pycparser==2.20
 pynliner==0.8.0
 pyOpenSSL==20.0.1
+PyPDF2==1.26.0
+python-bidi==0.4.2
 python-decouple==3.4
 pytz==2021.1
+reportlab==3.5.67
 service-identity==21.1.0
 simplejson==3.17.2
 six==1.15.0
@@ -40,4 +45,6 @@ sqlparse==0.4.1
 tornado==6.1
 Twisted==21.2.0
 txaio==21.2.1
+webencodings==0.5.1
+xhtml2pdf==0.2.5
 zope.interface==5.4.0
