--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ daphne==3.0.2
 Django==3.1.7
 django-inlinecss==0.3.0
 django-livereload-server==0.3.2
+django-qr-code==2.1.0
 djangorestframework==3.12.4
 future==0.18.2
 gunicorn==20.1.0
@@ -37,6 +38,7 @@ python-bidi==0.4.2
 python-decouple==3.4
 pytz==2021.1
 reportlab==3.5.67
+segno==1.3.3
 service-identity==21.1.0
 simplejson==3.17.2
 six==1.15.0
