--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "webpack --mode development --entry ./frontend/src/index.tsx --output-path ./courier_app/static/frontend",
+    "collect": "npm run dev && python manage.py collectstatic --noinput",
+    "build": "webpack --mode production --entry ./frontend/src/index.tsx --output-path ./courier_app/static/frontend"
   },
   "repository": {
     "type": "git",
@@ -16,5 +18,24 @@
   "bugs": {
     "url": "https://github.com/matt1007k/courier-web/issues"
   },
-  "homepage": "https://github.com/matt1007k/courier-web#readme"
+  "homepage": "https://github.com/matt1007k/courier-web#readme",
+  "devDependencies": {
+    "@babel/core": "^7.14.5",
+    "@babel/preset-env": "^7.14.5",
+    "@babel/preset-react": "^7.14.5",
+    "@babel/preset-typescript": "^7.14.5",
+    "@types/react": "^17.0.11",
+    "@types/react-dom": "^17.0.7",
+    "@types/styled-components": "^5.1.10",
+    "babel-loader": "^8.2.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "ts-loader": "^9.2.3",
+    "webpack": "^5.38.1",
+    "webpack-cli": "^4.7.2"
+  },
+  "dependencies": {
+    "styled-components": "^5.3.0",
+    "typescript": "^4.3.2"
+  }
 }
