--- a/requirements.txt
+++ b/requirements.txt
@@ -26,6 +26,8 @@ hyperlink==21.0.0
 idna==3.1
 incremental==21.3.0
 msgpack==1.0.2
+numpy==1.21.0
+pandas==1.3.0
 Pillow==8.1.2
 psycopg2-binary==2.8.6
 pyasn1==0.4.8
@@ -35,6 +37,7 @@ pynliner==0.8.0
 pyOpenSSL==20.0.1
 PyPDF2==1.26.0
 python-bidi==0.4.2
+python-dateutil==2.8.1
 python-decouple==3.4
 pytz==2021.1
 reportlab==3.5.67
@@ -49,4 +52,5 @@ Twisted==21.2.0
 txaio==21.2.1
 webencodings==0.5.1
 xhtml2pdf==0.2.5
+XlsxWriter==1.4.4
 zope.interface==5.4.0
