--- a/requirements.txt
+++ b/requirements.txt
@@ -29,7 +29,7 @@ msgpack==1.0.2
 numpy==1.21.0
 pandas==1.3.0
 Pillow==8.1.2
-psycopg2-binary==2.8.6
+# psycopg2-binary==2.8.6
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.20
